<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConnexusFall15</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Connexus</string>
    <string name="uploadImage">Upload Image</string>
    <string name="upload_hint">Add a caption for photo</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="title_activity_view_single_stream">ViewSingleStreamActivity</string>
    <string name="imagePage">View All Images</string>
    <string name="uploadImageActivity"> Upload a new image</string>
    <string name="title_activity_image_upload">ImageUpload</string>
    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>
    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="mock_server_has_token">Mock server has refresh token?</string>
    <string name="request_server_auth_code">Request server auth code?</string>
    <string name="configuration_error">Error: the value of WEB_CLIENT_ID or SERVER_BASE_URL is not  set correctly. This will cause errors when requesting a server auth code.</string>
    <string name="title_activity_view_all_streams">ViewAllStreamsActivity</string>
    <string name="viewAll">View all streams</string>
    <string name="useCamera">Use camera</string>
    <string name="findStreams">Find streams</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="searchNearby">Search Nearby Streams</string>
    <string name="title_activity_search_nearby">SearchNearbyActivity</string>
    <string name="mySubscribedStreams">My subscribed streams</string>

    <string name="openGPS">Please open GPS</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="backToViewAll">Back to View All Streams</string>
    <string name="more">More</string>
    <string name="capture">Capture</string>
    <string name="confirm">Use this</string>
    <string name="cancel">Cancel</string>
    <string name="connexus">Connexus</string>

</resources>
