<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="apt.connexusfall15.activity.ViewAllStreamsActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview_viewAllStreams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/findStreams"/>
    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"/>
    <Button
        android:id="@+id/btn_search_nearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchNearby"/>
    <Button
        android:id="@+id/btn_my_subscribed_streams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mySubscribedStreams"
        android:visibility="gone"/>

</LinearLayout>